--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <h1 class="card-title text-center">Problemas Matemáticos</h1>
                 <div id="problem" class="text-center my-4"></div>
                 <div class="form-group text-center">
-                    <input type="number" id="answer" class="form-control w-25 mx-auto" placeholder="Tu respuesta" onkeydown="handleKeyDown(event)">
+                    <input type="text" id="answer" class="form-control w-25 mx-auto" placeholder="Tu respuesta" onkeydown="handleKeyDown(event)">
                 </div>
                 <div class="text-center">
                     <button id="submitBtn" class="btn btn-primary" onclick="checkAnswer()">Enviar</button>
