--- a/index.html
+++ b/index.html
@@ -24,12 +24,13 @@
             </div>
         </div>
     </div>
-
+    <div id="cookie-banner" style="display: none;">
+        Este sitio utiliza cookies para mejorar su experiencia. 
+        <button id="accept-cookies">Aceptar</button>
+    </div>
     <footer>
         <p>Visita mi GitHub: <a href="https://github.com/CharlesLettuce" target="_blank" style="color: #ffc107;">CharlesLettuce</a></p>
-        
     </footer>
-
     <script src="script.js"></script>
 </body>
 </html>
