--- a/index.html
+++ b/index.html
@@ -4,32 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Problemas Matemáticos</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container mt-5">
+    <div class="container">
         <div class="card">
-            <div class="card-body">
-                <h1 class="card-title text-center">Problemas Matemáticos</h1>
-                <div id="problem" class="text-center my-4"></div>
-                <div class="form-group text-center">
-                    <input type="text" id="answer" class="form-control w-25 mx-auto" placeholder="Tu respuesta" onkeydown="handleKeyDown(event)">
+            <div>
+                <h1 class="card-title">Problemas Matemáticos</h1>
+                <div class="problem" id="problem"></div>
+                <div class="form-group">
+                    <input type="text" id="answer" class="input" placeholder="Tu respuesta" onkeydown="handleKeyDown(event)">
                 </div>
-                <div class="text-center">
-                    <button id="submitBtn" class="btn btn-primary" onclick="checkAnswer()">Enviar</button>
+                <div class="submitBtnDiv">
+                    <button id="submitBtn" class="btn" onclick="checkAnswer()">Enviar</button>
                 </div>
-                <div id="streak" class="text-center mt-4"></div>
-                <div id="feedback" class="text-center mt-4"></div>
+                <div class="streak" id="streak"></div>
+                <div class="feedback" id="feedback"></div>
             </div>
         </div>
     </div>
-    <div id="cookie-banner" style="display: none;">
-        Este sitio utiliza cookies para mejorar su experiencia. 
-        <button id="accept-cookies">Aceptar</button>
+    <div class="cookie-card">
+        <span>🍪 Cookies</span>
+        <p>Usamos cokkies para poder almacenar los datos de racha :D <a href="#"></a>. </p>
+        <div class="actions">
+            <button id="allowcokkie" class="btn">
+                Accept
+            </button>
+        </div>
     </div>
     <footer>
-        <p>Visita mi GitHub: <a href="https://github.com/CharlesLettuce" target="_blank" style="color: #ffc107;">CharlesLettuce</a></p>
+        <p>Visita mi GitHub: <a href="https://github.com/CharlesLettuce" target="_blank">CharlesLettuce</a></p>
     </footer>
     <script src="script.js"></script>
 </body>
