--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
     </div>
     <footer>
-        <p>Visita mi GitHub: <a href="https://github.com/ElegantCharles" target="_blank">ElegantLettuce</a></p>
+        <p>Visita mi GitHub: <a href="https://github.com/ElegantCharles" target="_blank">ElegantCharles</a></p>
     </footer>
     <script src="script.js"></script>
 </body>
